--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
         </div>
 
             <div ng-repeat="contact in clCtrl.contactList" class="card col-sm-4 ">
-              <img class="card-img-top" src="imgs/avatar.png" alt="Card image cap">
+              <img class="card-img-top" src="imgs/amish-john.jpg" alt="Card image cap">
               <div class="card-block">
               <p class="card-text">{{contact.name}}</p>
               <p class="card-text">{{contact.address}}</p>
